# linux-whiteboard

./: AUTHORS  BuildingWhiteboard.md  BuildingWhiteboardMainTrunk.md  ChangeLog  HowToUseWhiteboard.md  InstallingFromDebPackage.md  Makefile  Makefile.am  ProjectHome.md  README  SConstruct  autogen.sh  auxiliary.c  auxiliary.cpp  auxiliary.h  config.cfg  configure.ac  gui.cpp  gui.h  main.c  main.cpp  matrix.c  matrix.h  unit-test-skeleton.cpp  wii.c  wii.cpp  wii.h  wiicursor.cpp  wiicursor.h
branches/cpp/: CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  autogen.sh  auxiliary.cpp  auxiliary.h  common.h  configure.ac  events.h  gui.cpp  gui.h  main.cpp  wii.h  wiicursor.cpp  wiicursor.h
branches/cpp/debian/: changelog  control
branches/cpp/po/: LINGUAS  Makevars  POTFILES.in  ca.po  de.po  es.po  fr.po  sv.po  vi.po
branches/cpp/src/: CMakeLists.txt  ConfigFileParser.cpp  Makefile.am  auxiliary.cpp  auxiliary.h  calibration.h  common.cpp  common.h  configurator.cpp  configurator.h  events.cpp  gtk-configurator.cpp  gtk-configurator.h  gtk-gui.cpp  gtk-gui.h  gui.cpp  gui.h  irfilter.cpp  irfilter.h  main-window.glade  main.cpp  whiteboard.desktop.in  wiicontrol.cpp  wiicontrol.h  wiicursor.cpp  wiicursor.h  wiicursormanager.cpp  wiicursormanager.h
branches/cpp/src/pixmaps/: Makefile.am
branches/cpp/src/windows/: Makefile.am  calibration-window.glade  main-window.glade
branches/cpp/src/windows/gtk/: calibration-window.glade  main-window.glade
debian/: changelog  control  init.d.ex  init.d.lsb.ex  manpage.xml.ex  menu.ex  postinst.ex  prerm.ex  rules  whiteboard.default.ex
po/: LINGUAS  POTFILES.skip  ca.po  de.po  es.po  sv.po  vi.po  whiteboard.pot
src/: ConfigFileParser.h  Makefile.am  auxiliary.cpp  auxiliary.h  common.cpp  common.h  configurator.cpp  configurator.h  events.cpp  events.h  gtk-configurator.h  gtk-gui.cpp  gtk-gui.h  gui.cpp  gui.h  irfilter.cpp  irfilter.h  main-window.glade  main.cpp  physics.cpp  physics.h  whiteboard.desktop.in  wii.cpp  wii.h  wiicontrol.cpp  wiicontrol.h  wiicursor.cpp  wiicursor.h  wiicursormanager.cpp  wiicursormanager.h
src/pixmaps/: Makefile.am
src/windows/: Makefile.am  calibration-window.glade  main-window.glade
src/windows/gtk/: Makefile.am  main-window.glade
trunk/: INSTALL  Makefile  README  README-ConfigFileParser  SConstruct  auxiliary.c  auxiliary.h  common.h  demo  main.c  matrix.c  matrix.h  wii.c
trunk/debian/: README.Debian  changelog  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  manpage.1.ex  manpage.sgml.ex  postrm.ex  preinst.ex  watch.ex  whiteboard.doc-base.EX
trunk/po/: ca.po
trunk/src/: calibration.cpp  configurator.h  events.cpp  events.h  irfilter.h  main.cpp  matrix.h  wiicontrol.cpp  wiicursormanager.cpp  wiicursormanager.h
trunk/src/windows/gtk/: main-window.glade
trunk/src/windows/qt/: Makefile.am  main-window.ui
wiki/: BuildingWhiteboard.wiki  BuildingWhiteboardMainTrunk.wiki  HowToUseWhiteboard.wiki  InstallingFromDebPackage.wiki
