INTLTOOL_FILES = intltool-extract.in intltool-merge.in intltool-update.in

SUBDIRS = po src
#EXTRA_DIST = m4/ChangeLog build-aux/config.rpath config.rpath
EXTRA_DIST = $(INTLTOOL_FILES)
DISTCLEANFILES = intltool-extract intltool-merge intltool-update po/.intltool-merge-cache

#ACLOCAL_AMFLAGS = -I m4
